--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     <script src="Scripts/lib/soundjs-0.5.2.min.js"></script>
     <script src="Scripts/lib/preloadjs-0.4.1.min.js"></script>
 
+
     <!-- Game Files -->
+    <script src="Scripts/Lorn.js"></script>
+    <script src="Scripts/Cat.js"></script>
+    <script src="Scripts/FireBall.js"></script>
     <script src="Scripts/game.js"></script>
 </body>
 </html>
