--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
 </head>
-<body onload="preload()">
+<body onload="preload()" style="background-color: black;">
     <canvas id="canvas"  style="background-color: #6E8EAB;"></canvas>
 
     <!-- JavaScript Section -->
@@ -25,6 +25,8 @@
     <script src="Scripts/Lorn.js"></script>
     <script src="Scripts/Cat.js"></script>
     <script src="Scripts/FireBall.js"></script>
+    <script src="Scripts/Tree.js"></script>
+
     <script src="Scripts/game.js"></script>
 </body>
 </html>
