change background color to a darker blue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/app.css" rel="stylesheet" />
 </head>
 <body onload="preload()" style="background-color: black;">
-    <canvas id="canvas"  style="background-color: #6E8EAB;"></canvas>
+    <canvas id="canvas"  style="background-color: #003380;"></canvas>
 
     <!-- JavaScript Section -->
     <script src="Scripts/lib/jquery-2.1.1.min.js"></script>
