add reference for BoxBlurFilter to index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>LORN</title>
-    <!-- CSS Section -->
-    <link href="css/normalize.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
+
 </head>
 <body onload="preload()" style="background-color: black;">
     <canvas id="canvas"  style="background-color: #003380;"></canvas>
@@ -26,6 +24,7 @@
     <script src="Scripts/Cat.js"></script>
     <script src="Scripts/FireBall.js"></script>
     <script src="Scripts/Tree.js"></script>
+    <script src="Scripts/filters/BoxBlurFilter.js"></script>
 
     <script src="Scripts/game.js"></script>
 </body>
