--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="Scripts/Cat.js"></script>
     <script src="Scripts/FireBall.js"></script>
     <script src="Scripts/Tree.js"></script>
+    <script src="Scripts/Scoreboard.js"></script>
     <script src="Scripts/filters/BoxBlurFilter.js"></script>
 
     <script src="Scripts/game.js"></script>
