Diamond Class and scoreboard basic layout

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>LORN</title>
 
+    <!--  GOOGLE FONT -->
+    <link href='http://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
+
 </head>
 <body onload="preload()" style="background-color: black;">
     <canvas id="canvas"  style="background-color: #003380;"></canvas>
@@ -25,6 +28,7 @@
     <script src="Scripts/FireBall.js"></script>
     <script src="Scripts/Tree.js"></script>
     <script src="Scripts/Scoreboard.js"></script>
+    <script src="Scripts/Diamond.js"></script>
     <script src="Scripts/filters/BoxBlurFilter.js"></script>
 
     <script src="Scripts/game.js"></script>
