--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="Scripts/Cat.js"></script>
     <script src="Scripts/FireBall.js"></script>
     <script src="Scripts/Tree.js"></script>
-    <script src="Scripts/Scoreboard.js"></script>
+    <script src="Scripts/Display.js"></script>
     <script src="Scripts/Diamond.js"></script>
     <script src="Scripts/filters/BoxBlurFilter.js"></script>
 
