--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>LORN</title>
 
+        <!-- CSS -->
+        <link rel="stylesheet" href="css/main.css" type='text/css'>
+
         <!--  GOOGLE FONTS -->
         <link href='http://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
     </head>
