Add Brand Class, set up partial parallax effect while dragging mouse over the logo (home screen)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <script src="Scripts/Classes/Tree.js"></script>
         <script src="Scripts/Classes/Display.js"></script>
         <script src="Scripts/Classes/Diamond.js"></script>
-
+        <script src="Scripts/Classes/Brand.js"></script>
         <!-- Game Filters -->
         <script src="Scripts/filters/BoxBlurFilter.js"></script>
 
