--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta content='width=device-width, initial-scale=1', name='viewport', maximum-scale=1.0, user-scalable='no'  />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>LORN</title>
