--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <canvas id="canvas"  style="background-color: #003380;"></canvas>
 
         <!-- JavaScript Section -->
-        <script src="Scripts/lib/jquery-2.1.1.min.js"></script>
+        <script src="script/lib/jquery-2.1.1.min.js"></script>
 
         <!-- Game Frameworks -->
-        <script src="Scripts/lib/easeljs-0.7.1.min.js"></script>
-        <script src="Scripts/lib/tweenjs-0.5.1.min.js"></script>
-        <script src="Scripts/lib/soundjs-0.5.2.min.js"></script>
-        <script src="Scripts/lib/preloadjs-0.4.1.min.js"></script>
+        <script src="script/lib/easeljs-0.7.1.min.js"></script>
+        <script src="script/lib/tweenjs-0.5.1.min.js"></script>
+        <script src="script/lib/soundjs-0.5.2.min.js"></script>
+        <script src="script/lib/preloadjs-0.4.1.min.js"></script>
 
         <!-- helper functions -->
         <script src="helpers.js"></script>
@@ -34,18 +34,18 @@
             Game Classes :
                 Class files must be required before game.js 
         -->
-        <script src="Scripts/Classes/Lorn.js"></script>
-        <script src="Scripts/Classes/Cat.js"></script>
-        <script src="Scripts/Classes/FireBall.js"></script>
-        <script src="Scripts/Classes/Tree.js"></script>
-        <script src="Scripts/Classes/Display.js"></script>
-        <script src="Scripts/Classes/Diamond.js"></script>
+        <script src="script/Classes/Lorn.js"></script>
+        <script src="script/Classes/Cat.js"></script>
+        <script src="script/Classes/FireBall.js"></script>
+        <script src="script/Classes/Tree.js"></script>
+        <script src="script/Classes/Display.js"></script>
+        <script src="script/Classes/Diamond.js"></script>
 
         <!-- Game Filters -->
-        <script src="Scripts/filters/BoxBlurFilter.js"></script>
+        <script src="script/filters/BoxBlurFilter.js"></script>
 
         <!-- Game logic -->
-        <script src="Scripts/game.js"></script>
+        <script src="script/game.js"></script>
     </body>
 
 </html>
