rename folders and refs

--- a/index.html
+++ b/index.html
@@ -30,17 +30,18 @@
         <script src="script/lib/preloadjs-0.4.1.min.js"></script>
 
         <!-- helper functions -->
-        <script src="helpers.js"></script>
+        <script src="script/helpers.js"></script>
         <!-- 
             Game Classes :
                 Class files must be required before game.js 
         -->
-        <script src="script/Classes/Lorn.js"></script>
-        <script src="script/Classes/Cat.js"></script>
-        <script src="script/Classes/FireBall.js"></script>
-        <script src="script/Classes/Tree.js"></script>
-        <script src="script/Classes/Display.js"></script>
-        <script src="script/Classes/Diamond.js"></script>
+        <script src="script/classes/Brand.js"></script>
+        <script src="script/classes/Lorn.js"></script>
+        <script src="script/classes/Cat.js"></script>
+        <script src="script/classes/FireBall.js"></script>
+        <script src="script/classes/Tree.js"></script>
+        <script src="script/classes/Display.js"></script>
+        <script src="script/classes/Diamond.js"></script>
 
         <!-- Game Filters -->
         <script src="script/filters/BoxBlurFilter.js"></script>
