Add Death Class

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <script src="script/classes/Tree.js"></script>
         <script src="script/classes/Display.js"></script>
         <script src="script/classes/Diamond.js"></script>
+        <script src="script/classes/Death.js"></script>
 
         <!-- Game Filters -->
         <script src="script/filters/BoxBlurFilter.js"></script>
