Add Death, DeathBall and 3 levels

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <script src="script/classes/Lorn.js"></script>
         <script src="script/classes/Cat.js"></script>
         <script src="script/classes/FireBall.js"></script>
+        <script src="script/classes/DeathBall.js"></script>
         <script src="script/classes/Tree.js"></script>
         <script src="script/classes/Display.js"></script>
         <script src="script/classes/Diamond.js"></script>
