--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body onload="preload()" style="background-color: black;">
 
         <!-- Canvas -->
-        <canvas id="canvas"  style="background-color: #003380;"></canvas>
+        <canvas id="canvas"  ></canvas>
 
         <!-- JavaScript Section -->
         <script src="script/lib/jquery-2.1.1.min.js"></script>
