move global vars to other file

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
         <!-- helper functions -->
         <script src="script/helpers.js"></script>
+        <!-- global vars -->
+        <script src="script/globalVariables.js"></script>
         <!-- 
             Game Classes :
                 Class files must be required before game.js 
